add name for switch