@@ -23,35 +23,46 @@ package com.lushprojects.circuitjs1.client;
 class SwitchElm extends CircuitElm {
     boolean momentary;
     // position 0 == closed, position 1 == open
+    String name;
     int position, posCount;
+    static int switchID = 0;
     public SwitchElm(int xx, int yy) {
 	super(xx, yy);
 	momentary = false;
 	position = 0;
+	name = "switch" + String.valueOf(switchID++);
 	posCount = 2;
     }
+    
     SwitchElm(int xx, int yy, boolean mm) {
 	super(xx, yy);
 	position = (mm) ? 1 : 0;
 	momentary = mm;
+	name = "switch" + String.valueOf(switchID++);
 	posCount = 2;
     }
-    public SwitchElm(int xa, int ya, int xb, int yb, int f,
+    public SwitchElm(int xa, int ya, int xb, int yb, int flags,
 		     StringTokenizer st) {
-	super(xa, ya, xb, yb, f);
+	super(xa, ya, xb, yb, flags);
 	String str = st.nextToken();
 	if (str.compareTo("true") == 0)
 	    position = (this instanceof LogicInputElm) ? 0 : 1;
 	else if (str.compareTo("false") == 0)
 	     position = (this instanceof LogicInputElm) ? 1 : 0;
 	else
-	    position = new Integer(str).intValue();
-	momentary = new Boolean(st.nextToken()).booleanValue();
+	    position = Integer.valueOf(str);
+	momentary = Boolean.valueOf(st.nextToken());
+
+	name = st.nextToken().replace(' ', '_');
 	posCount = 2;
     }
-    int getDumpType() { return 's'; }
+    
+    int getDumpType() { 
+	return 's'; 
+    }
+    
     String dump() {
-	return super.dump() + " " + position + " " + momentary;
+	return super.dump() + " " + position + " " + momentary + " " + name;
     }
 
     Point ps, ps2;
@@ -78,7 +89,10 @@ class SwitchElm extends CircuitElm {
 	    g.setColor(whiteColor);
 	interpPoint(lead1, lead2, ps,  0, hs1);
 	interpPoint(lead1, lead2, ps2, 1, hs2);
-	    
+	
+	//write name
+	drawValues(g, name, -3);
+	
 	drawThickLine(g, ps, ps2);
 	drawPosts(g);
     }
@@ -120,19 +134,40 @@ class SwitchElm extends CircuitElm {
 	    arr[3] = "I = " + getCurrentDText(getCurrent());
 	}
     }
-    boolean getConnection(int n1, int n2) { return position == 0; }
+    
+    boolean getConnection(int n1, int n2) { 
+	return position == 0; 
+    }
+    
     boolean isWire() { return position == 0; }
-    public EditInfo getEditInfo(int n) {
-	if (n == 0) {
+    
+    public EditInfo getEditInfo(int index) {
+	switch (index) {
+	case 0:
+	    EditInfo ei1 = new EditInfo("Name", 0, -1, -1);
+	    ei1.text = name;
+	    return ei1;
+	case 1:
 	    EditInfo ei = new EditInfo("", 0, -1, -1);
 	    ei.checkbox = new Checkbox("Momentary Switch", momentary);
 	    return ei;
+	default:
+	    return null;
 	}
-	return null;
     }
-    public void setEditValue(int n, EditInfo ei) {
-	if (n == 0)
+ 
+    public void setEditValue(int index, EditInfo ei) {
+	switch (index) {
+	case 0:
+	    name = ei.textf.getText().replace(' ', '_');
+	    break;
+	case 1:
 	    momentary = ei.checkbox.getState();
+	    break;
+	default:
+	    break;
+	}
+	    
     }
     int getShortcut() { return 's'; }
 }
